z-index bug with background and text

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ hr {
     min-height: 100vh;
     max-height: 125%; 
     opacity: 20%;
-    z-index: 1;
+    z-index: 0;
     overflow-x: hidden;
     pointer-events: none;
 }
